objects/ASI_TnE_Route_Type__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TnE_Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>VN: Dept Head</inlineHelpText>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TnE_Route_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>VN: Fin Verifier 1</inlineHelpText>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TnE_Route_Types1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>VN: Fin Verifier 2</inlineHelpText>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TnE_Route_Types2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Company__c</fullName>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TnE_Route_Types4</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ASI TnE Route Type</label>
    <listViews>
        <fullName>ASI_TnE_HK_All_Route_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Company__c</columns>
        <columns>ASI_TnE_Department__c</columns>
        <columns>ASI_TnE_User__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Route_Type__c.ASI_TnE_HK_Route_Type</value>
        </filters>
        <label>All HK Route Types</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_TnE_HK_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_ID_All_Route_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Company__c</columns>
        <columns>ASI_TnE_Department__c</columns>
        <columns>ASI_TnE_User__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Route_Type__c.ASI_TnE_ID_Route_Type</value>
        </filters>
        <label>All ID Route Types</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_TnE_ID_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_MY_All_Route_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Company__c</columns>
        <columns>ASI_TnE_Department__c</columns>
        <columns>ASI_TnE_User__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Route_Type__c.ASI_TnE_MY_Route_Type</value>
        </filters>
        <label>All MY Route Types</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_TnE_MY_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_PH_All_Route_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Company__c</columns>
        <columns>ASI_TnE_Department__c</columns>
        <columns>ASI_TnE_User__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Route_Type__c.ASI_TnE_PH_Route_Type</value>
        </filters>
        <label>All PH Route Types</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_TnE_PH_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_SG_All_Cash_Adv_Pre_Approval_Route_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Company__c</columns>
        <columns>ASI_TnE_Department__c</columns>
        <columns>ASI_TnE_User__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Route_Type__c.ASI_TnE_SG_Cash_Advance_Pre_Approval_Route_Type</value>
        </filters>
        <label>All SG Cash Adv Pre-Approval Route Types</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_TnE_SG_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_SG_All_Route_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Company__c</columns>
        <columns>ASI_TnE_Department__c</columns>
        <columns>ASI_TnE_User__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Route_Type__c.ASI_TnE_SG_Route_Type</value>
        </filters>
        <label>All SG Route Types</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_TnE_SG_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_TH_All_Route_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Company__c</columns>
        <columns>ASI_TnE_Department__c</columns>
        <columns>ASI_TnE_User__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Route_Type__c.ASI_TnE_TH_Route_Type</value>
        </filters>
        <label>All TH Route Types</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_TnE_TH_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_TW_All_Route_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Company__c</columns>
        <columns>ASI_TnE_Department__c</columns>
        <columns>ASI_TnE_User__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Route_Type__c.ASI_TnE_TW_Route_Type</value>
        </filters>
        <label>All TW Route Types</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_TnE_TW_IT_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_VN_Route_Types</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_TnE_Approver1__c</columns>
        <columns>ASI_TnE_Approver2__c</columns>
        <columns>ASI_TnE_Approver3__c</columns>
        <columns>ASI_TnE_Approver4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Route_Type__c.ASI_TnE_VN_Route_Type</value>
        </filters>
        <label>All VN Route Types</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_VN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Approver1__c</columns>
        <columns>ASI_TnE_Approver2__c</columns>
        <columns>ASI_TnE_Approver3__c</columns>
        <columns>ASI_TnE_Approver4__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_TnE_Country__c</columns>
        <columns>ASI_TnE_User__c</columns>
        <columns>ASI_TnE_Department__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>TnE-RT-{0000}</displayFormat>
        <label>Route Type Ref No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI TnE Route Types</pluralLabel>
    <recordTypes>
        <fullName>ASI_TnE_HK_Route_Type</fullName>
        <active>true</active>
        <label>ASI TnE HK Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_ID_Route_Type</fullName>
        <active>true</active>
        <label>ASI TnE ID Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_KH_Cash_Advance_Pre_Approval_Route_Type</fullName>
        <active>true</active>
        <label>ASI TnE KH Cash Advance Pre-Approval Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_KH_Route_Type</fullName>
        <active>true</active>
        <label>ASI TnE KH Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_MY_Route_Type</fullName>
        <active>true</active>
        <label>ASI TnE MY Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_PH_Route_Type</fullName>
        <active>true</active>
        <label>ASI TnE PH Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_SG_Cash_Advance_Pre_Approval_Route_Type</fullName>
        <active>true</active>
        <label>ASI TnE SG Cash Advance Pre-Approval Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_SG_Route_Type</fullName>
        <active>true</active>
        <label>ASI TnE SG Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TH_Route_Type</fullName>
        <active>true</active>
        <label>ASI TnE TH Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TW_Route_Type</fullName>
        <active>true</active>
        <label>ASI TnE TW Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_VN_Route_Type</fullName>
        <active>true</active>
        <label>ASI TnE VN Route Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>